--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <h1 class="page-heading">About</h1>
+  <h1 class="page-heading">Welcome</h1>
 
 
   <p>Hello! My name is Nicolás Medeiros and I live in Montevideo, Uruguay.</p> 
